--- a/css/custom.scss
+++ b/css/custom.scss
@@ -11,9 +11,14 @@ html{
 
 a{
     color: rgba(0,0,0,0.5);
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     font-weight: bold;
     text-decoration: none;
+    transition: color 150ms linear;
+}
+
+a:hover{
+    color: rgba(0,0,0,0.75);
 }
 
 nav{
@@ -23,12 +28,12 @@ nav{
     width: 100%;
     margin-top: 50vh;
 
-    .prev{
-        padding-left: 20px;
+    #prev{
+        margin-left: 20px;
     }
 
-    .next{
-        padding-right: 20px;
+    #next{
+        margin-right: 20px;
     }
 }
 
